--- a/1.ipynb
+++ b/1.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "44af2862",
    "metadata": {
     "colab": {
@@ -145,12 +145,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [10.004  9.504] 3173.15\n",
-      "100 [11.82211538 11.32211538] 737.091826923077\n",
-      "200 [11.82211538 11.32211538] 737.091826923077\n",
-      "300 [11.82211538 11.32211538] 737.091826923077\n",
-      "400 [11.82211538 11.32211538] 737.091826923077\n",
-      "500 [11.82211538 11.32211538] 737.091826923077\n"
+      "0 [3.204 7.3  ] 3173.15\n",
+      "100 [41.95214292  4.88570667] 61.568780958579865\n",
+      "200 [46.58653419  4.02993086] 46.171203616546116\n",
+      "300 [47.15320146  3.92529142] 45.94099410777859\n",
+      "400 [47.22249035  3.9124967 ] 45.937552240480294\n",
+      "500 [47.2309626   3.91093223] 45.93750078104854\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
     "for i in range(iterations):\n",
     "    y_pred = np.dot(X, w)\n",
     "    err = calc_mse(y, y_pred)\n",
-    "    w -= (eta * (1/n * 2 * np.sum(X.T * (y_pred - y)))) # ошибка!\n",
+    "    w -= (eta * (1/n * 2 * (np.dot(X.T, (y_pred - y))))) # ошибка!\n",
     "    if i % 100 == 0:\n",
     "        print(i, w, err) # [47.23214286  3.91071429] 45.937499999999986"
    ]
@@ -189,18 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "89557468",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "810\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = X.shape[0]\n",
     "w = np.array([1, 0.5])\n",
